--- a/layouts/_partials/docs/header.html
+++ b/layouts/_partials/docs/header.html
@@ -1,34 +1,13 @@
-<div class="site-topbar flex align-center justify-between">
-  <div class="site-left flex align-center">
-    <label for="menu-control" class="mr-2 topbar-menu-toggle" title="Menu">
-      <img src="{{ partial "docs/icon" "menu" }}" class="book-icon" alt="Menu" />
-    </label>
+<div class="flex align-center justify-between">
+  <label for="menu-control">
+    <img src="{{ partial "docs/icon" "menu" }}" class="book-icon" alt="{{ partial "docs/text/i18n" "Menu" }}" />
+  </label>
 
-    <a class="site-brand" href="{{ .Site.BaseURL | relURL }}">Home</a>
+  <h3>{{ partial "docs/title" . }}</h3>
 
-    <nav class="site-nav">
-      {{- range site.Menus.main -}}
-        <a class="site-nav-item" href="{{ .URL | relURL }}">{{ .Name }}</a>
-      {{- end -}}
-    </nav>
-  </div>
-
-  <div class="site-right flex align-center">
-    {{ if default true .Site.Params.BookSearch }}
-      <div class="top-search">
-        <input id="book-search-input" type="text"
-          placeholder="搜索（Alt + /）"
-          aria-label="搜索"
-          maxlength="64" data-hotkeys="s/" />
-        <div class="book-search-spinner hidden"></div>
-        <ul id="book-search-results" class="top-search-results"></ul>
-      </div>
+  <label for="toc-control">
+    {{ if partial "docs/toc-show" . }}
+    <img src="{{ partial "docs/icon" "toc" }}" class="book-icon" alt="{{ partial "docs/text/i18n" "Table of Contents" }}" />
     {{ end }}
-
-    <label for="toc-control" class="ml-2" title="TOC">
-      {{ if partial "docs/toc-show" . }}
-        <img src="{{ partial "docs/icon" "toc" }}" class="book-icon" alt="TOC" />
-      {{ end }}
-    </label>
-  </div>
+  </label>
 </div>
