--- a/assets/_custom.scss
+++ b/assets/_custom.scss
@@ -83,6 +83,7 @@
 }
 
 .site-search #book-search-results {
+  display: none; /* default hidden; JS toggles */
   position: absolute;
   top: calc(100% + 6px);
   left: 0;
@@ -98,6 +99,8 @@
   margin: 0;
   padding: 6px;
 }
+
+.site-search #book-search-results.show { display: block; }
 
 .site-search #book-search-results li { list-style: none; margin: 0; padding: 0; }
 .site-search #book-search-results li a {
