--- a/layouts/list.html
+++ b/layouts/list.html
@@ -4,7 +4,8 @@
       {{- .Content -}}
     </article>
   {{ else }}
-    {{ with index .Pages 0 }}
+    {{ $pages := sort (sort .Pages "Date" "desc") "Weight" "desc" }}
+    {{ with index $pages 0 }}
       <script>window.location.replace("{{ .RelPermalink }}");</script>
       <meta http-equiv="refresh" content="0; url={{ .RelPermalink }}">
       <p>正在跳转到 <a href="{{ .RelPermalink }}">{{ .Title }}</a>…</p>
